[Releng] Fix new deprecation warnings with Java 9++